<resources>
    <string name="app_name">КИП Калькулятор</string>
    <string name="hello_word">Программа расчёта нормированных величин</string>
    <string name="rtd_choice_button_text">НСХ датчиков температуры</string>
    <string name="temp_to_resistance_choice_button">Расчёт сопротивления по температуре</string>
    <string name="rtd_hello_word_txt">Расчёт характеристик датчика температуры</string>
    <string name="chose_material_rtd_txt">Материал ЧЭ</string>
    <string name="chose_nominal_resistance_val">Номинальное сопротивление</string>
    <string name="chose_RTD_operation">Выберите операцию</string>
    <string name="value_input_text">Введите значение</string>
    <string name="resistance_to_temp_button">Рассчитать</string>
    <string name="out_text_tex_view" />
    <string name="temperature_input_text">Введите сопротивление</string>
    <string name="temperature_to_temp_button">Рассчитать сопротивление</string>
    <string name="res_radio_button">Температуру</string>
    <string name="invite_text_txt">Рассчитываем</string>
    <string name="temp_radio_button">Сопротивление</string>
    <string name="current_loop_hello_word">Расчёт значений токовой петли</string>
    <string name="upper_current_level_text">Верхнее граничное значение (20 мА)</string>
    <string name="low_current_level_text">Нижнее граничное значение (4 мА)</string>
    <string name="current_radio_button_text">Ток</string>
    <string name="value_radio_button">Величину</string>
    <string name="invite_current_text">Рассчитываем</string>
    <string name="current_result_button_text">Рассчитать</string>
    <string name="current_result_edit_text">Значение</string>
    <string name="current_loop_choice_button_text">Значение токовой петли</string>
    <string name="current_value">Введите значение величины</string>
    <string name="low_limit_more_high_limit">Верхнее значение больше нижнего</string>
    <string name="wrong_value_limit">Вы ввели значение вне пределов</string>
    <string name="wrong_current_limits">Неверное значения тока</string>
    <string name="wrong_high_limit">Верхнее значение равно нулю</string>
    <string name="wrong_temperature_limit">Неверное значение температуры</string>
    <string name="wrong_resistance_limit">Неверное значение сопротивления</string>

    <string-array name="rtd_material">
        <item>Медь</item>
        <item>Платина(PT)</item>
        <item>Платина(П)</item>
    </string-array>
    <string-array name="rtd_resistance">
        <item>50</item>
        <item>100</item>
        <item>500</item>
        <item>1000</item>
    </string-array>
    <string-array name="rtd_operation">
        <item>Сопротивление в температуру</item>
        <item>Температуру в сопротивление</item>
    </string-array>
</resources>