<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/rtdResistanceToTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/rtd_hello_word_txt"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chooseMaterialRTDTv"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/chose_material_rtd_txt"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rtdResistanceToTemperature" />

    <Spinner
        android:id="@+id/RDTMaterialSpinner"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:entries="@array/rtd_material"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/chooseMaterialRTDTv"
        app:layout_constraintTop_toBottomOf="@+id/rtdResistanceToTemperature" />

    <TextView
        android:id="@+id/chooseNominalResitanceVT"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="38dp"
        android:text="@string/chose_nominal_resistance_val"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseMaterialRTDTv" />

    <Spinner
        android:id="@+id/rtdResistanceSpinner"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="38dp"
        android:entries="@array/rtd_resistance"
        app:layout_constraintStart_toEndOf="@+id/chooseNominalResitanceVT"
        app:layout_constraintTop_toBottomOf="@+id/RDTMaterialSpinner" />

    <EditText
        android:id="@+id/resistanceEditText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="11dp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rtdResistanceSpinner" />

    <TextView
        android:id="@+id/resistanceInputText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/resistance_input_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/resistanceEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseNominalResitanceVT" />

    <Button
        android:id="@+id/resistanceToTempButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:text="@string/resistance_to_temp_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resistanceEditText" />

    <TextView
        android:id="@+id/outTestTextView"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        android:text="@string/out_text_tex_view"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resistanceToTempButton" />

</androidx.constraintlayout.widget.ConstraintLayout>